ggplot2 0.9.3.1.99
----------------------------------------------------------------

* Allow specifying only one of the limits in a scale and use the automatic
  calculation of the other limit by passing NA to to the limit function,
  `xlim()` or `ylim()` (@jimhester, #557).

* `geom_dotplot` now works with qplot. (@rasmusab. Fixes #825)

* `stat_smooth()` checks for `method = "auto"` and `method = "glm"` in
  a safer way.

* `ggpcp()`, `ggfluctuation()`, `ggmissing()`, `ggstructure()`, and
  `ggorder()` are now defunct and have been removed.

* `aes()` no more treats variables like `a..x..b` as a calculated aesthetic
  (@krlmlr, #834).

* Add `"none"` to documentation of `theme()` for parameter `legend.position`
  (@krlmlr, #829).

ggplot2 0.9.3.1
----------------------------------------------------------------

BUG FIXES

* The theme element `legend.box.just` now can be set. It was not properly
  recognized before.

* `stat_density2d` previously resulted in errors when geom="polygon". This
  is fixed. (Fixes #741 and #749)

* `annotation_logticks` previously drew one set of logticks for each group,
  and inherited aesthetic mappings like colour. It no longer does this. (Fixes
  #767)

* Plots with geom_crossbar not display correct symbol in legend. (Fixes #768)

* Grouping is no longer set automatically by `stat_summary()`, allowing for
  summary paths. This reverts a change made for 0.9.3. (Fixes #732 and #739)

ggplot2 0.9.3
----------------------------------------------------------------

* The `plotmatrix` function has been deprecated and prints a warning
  message.

* `stat_bin` now produces warning messages when it is used with set or
  mapped y values. Previously, it was possible to use `stat_bin` and
  also set/map y values; if there was one y value per group, it would
  display the y values from the data, instead of the counts of cases for
  each group. This usage is deprecated and will be removed in a future