@@ -286,7 +286,6 @@ export(plotmatrix)
 export(position_dodge)
 export(position_fill)
 export(position_identity)
-export(position_jd)
 export(position_jitter)
 export(position_jitterdodge)
 export(position_stack)
