@@ -1,28 +1,32 @@
 % Generated by roxygen2 (4.0.0): do not edit by hand
 \name{position_jitterdodge}
-\alias{position_jd}
 \alias{position_jitterdodge}
-\title{Jitter-dodge points to align them with a boxplot including fill aesthetic}
+\title{Adjust position by simultaneously dodging and jittering}
 \usage{
-position_jitterdodge(width = NULL, height = NULL)
-
-position_jd(width = NULL, height = NULL)
+position_jitterdodge(jitter.width = NULL, jitter.height = NULL,
+  dodge.width = NULL)
 }
 \arguments{
-  \item{width}{degree of jitter in x direction. Defaults to
-  40\% of the resolution of the data.}
+  \item{jitter.width}{degree of jitter in x direction.
+  Defaults to 40\% of the resolution of the data.}
 
-  \item{height}{degree of jitter in y direction. Defaults
-  to 40\% of the resolution of the data}
+  \item{jitter.height}{degree of jitter in y direction.
+  Defaults to 0.}
+
+  \item{dodge.width}{the amount to dodge in the x
+  direction. Defaults to 0.75, the default
+  \code{position_dodge()} width.}
 }
 \description{
-Jitter-dodge points to align them with a boxplot including fill aesthetic
+This is primarily used for aligning points generated through
+\code{geom_point()} with dodged boxplots (e.g., a \code{geom_boxplot()} with
+a fill aesthetic supplied).
 }
 \examples{
-dsub <- diamonds[ sample(1:nrow(diamonds), 1000), ]
-ggplot(dsub, aes(x=cut, y=carat, fill=clarity)) +
-  geom_boxplot(outlier.size=0) +
-  geom_point( pch=21, position=position_jitterdodge() )
+dsub <- diamonds[ sample(nrow(diamonds), 1000), ]
+ggplot(dsub, aes(x = cut, y = carat, fill = clarity)) +
+  geom_boxplot(outlier.size = 0) +
+  geom_point(pch = 21, position = position_jitterdodge())
 }
 \seealso{
 Other position adjustments: \code{\link{position_dodge}};
