@@ -45,7 +45,6 @@ qplot(Time, Value, data = data.set, colour = Type, geom = "line",
 Other position adjustments: \code{\link{position_dodge}};
   \code{\link{position_fill}};
   \code{\link{position_identity}};
-  \code{\link{position_jd}},
   \code{\link{position_jitterdodge}};
   \code{\link{position_jitter}}
 }
