@@ -1,6 +1,11 @@
 ggplot2 0.9.3.1.99
 ----------------------------------------------------------------
 
+* `position_jitterdodge()` combines `position_jitter()` and `position_dodge()`,
+  allowing the user to plot and align points generated by e.g. `geom_point()`
+  with those generated by a dodged `geom_boxplot()`. See
+  `example(position_jitterdodge)` for a potential usage. (@kevinushey, #932)
+
 * Allow specifying only one of the limits in a scale and use the automatic
   calculation of the other limit by passing NA to to the limit function,
   `xlim()` or `ylim()` (@jimhester, #557).
